# RandotStudio

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
Resources/: RandotStudio.qrc
Resources/strings/: about.html
Resources/translations/: main_en.ts  main_zh.ts
Translation/: en_US.ts  zh_CN.ts
installer/: make_win_installer.bat
installer/config/: config.xml
src/: main.cpp
src/imaging/: imaging.cpp  imaging.h
src/models/: canvas.cpp  canvas.h  shape.cpp  shape.h  stereoimage.cpp  stereoimage.h  target.cpp  target.h
src/utils/: errors.cpp  errors.h  logging.cpp  logging.h  widget_helper.h
src/viewmodels/: mainwindowvm.cpp  mainwindowvm.h
src/views/: canvas_setting_panel.cpp  canvas_setting_panel.h  canvas_setting_panel.ui  dialogabout.cpp  dialogabout.h  dialogabout.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  target_setting_panel.cpp  target_setting_panel.h  target_setting_panel.ui
src/widgets/: color_chooser.cpp  color_chooser.h  color_chooser.ui  labeledlineedit.cpp  labeledlineedit.h  labeledlineedit.ui  listitemtarget.cpp  listitemtarget.h  listitemtarget.ui  previewcanvas.cpp  previewcanvas.h  previewcanvasitem.cpp  previewcanvasitem.h
